--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,14 @@
 	</div>
 
 	<div class="content">
-	 <img src="assets/images/portfolio_1.jpg">
-	 <img src="assets/images/portfolio_2.jpg">
-	 <img src="assets/images/portfolio_8.jpg">
-	 <img src="assets/images/portfolio_9.jpg">
-	 <img src="assets/images/portfolio_12.jpg">
-	 <img src="assets/images/portfolio_5.jpg">
+	 <!-- <div class="imgbox"> -->
+	  <img class="portimg" src="assets/images/portfolio_2.jpg">
+	  <img class="portimg" src="assets/images/portfolio_8.jpg">
+	  <img class="portimg" src="assets/images/portfolio_9.jpg">
+	  <img class="portimg" src="assets/images/portfolio_1.jpg">
+	  <img class="portimg" src="assets/images/portfolio_12.jpg">
+	  <img class="portimg" src="assets/images/portfolio_5.jpg">
+	 <!-- </div> -->
 	</div>
 	<!-- <img src="assets/images/profile_3.jpg"> -->
 </section>
@@ -56,7 +58,6 @@
 	 </a>
 	</div>
 </aside>
-
 </div>
 
 <footer class="copyright">
