--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
 	<article class="content">
 	 <img class="profile" src="assets/images/profile_3.jpg">
 	 <p id="bio">
-	 	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+	 	I am a world traveler who, along with my wonderful girlfriend, has a great appreciation of art and art collecting. During my travels in France, I was exposed to a number of artistic genres and medium, as a part of a cultural and linguistic exprerience during the of 2010. Nevertheless the local DMV art community continues to overflow with artistic expression. 
+	 </p>
+
+	 <p id="bio">
+	 	In additon to art, I am a lover of music and George, my 1 year old beagle that my girlfriend and I have had for 10 months. From the beats of the islands to the house music originating in Chicago, music speaks to me in that ways of dear friend. And George, well, he's just the cutest puppy you'd ever meet. Bubbling forth with personality, energy, and huministic mannerisms, he's a wonderful source of laughter and a little ray of sushine on the cloudiest days.
+	</p>
+
+	 <p id="bio">
+		Until next time. 
+	</p>
+
+	 <p id="bio">
+	 	-Carl 
+
 	 </p>
 	</article>
 </section>
