--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 	<article class="content">
 	 <img class="profile" src="assets/images/profile_3.jpg">
 	 <p id="bio">
-	 	I am a world traveler who, along with my wonderful girlfriend, has a great appreciation of art and art collecting. During my travels in France, I was exposed to a number of artistic genres and medium, as a part of a cultural and linguistic exprerience during the of 2010. Nevertheless the local DMV art community continues to overflow with artistic expression. 
+	 	I am a world traveler who, along with my wonderful girlfriend, has a great appreciation of art and art collecting. During my travels in France, I was exposed to a number of artistic genres and media, as a part of a cultural and linguistic exprerience during the spring of 2010. Although I am fond of art with Haitian, French and Brazilian origins, the local DMV art community overflows with artistic expression. 
 	 </p>
 
 	 <p id="bio">
-	 	In additon to art, I am a lover of music and George, my 1 year old beagle that my girlfriend and I have had for 10 months. From the beats of the islands to the house music originating in Chicago, music speaks to me in that ways of dear friend. And George, well, he's just the cutest puppy you'd ever meet. Bubbling forth with personality, energy, and huministic mannerisms, he's a wonderful source of laughter and a little ray of sushine on the cloudiest days.
+	 	In addition to art, I am a lover of music, sports and George, my 1 year old beagle that my girlfriend and I have had for 10 months. From the beats of the islands to the house music originating in Chicago, music speaks to me in the way of a dear friend. Soccer is a passion. And George, well, he's just the cutest puppy you'd ever meet. Bubbling forth with personality, energy, and huministic mannerisms, he's a wonderful source of laughter and a little ray of sushine on the cloudiest days.
 	</p>
 
 	 <p id="bio">
