--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	 <h2 class="maintitle">About Me</h2>
 	</div>
 	<article class="content">
-	 <img class="profile" src="assets/images/profile_3.jpg">
+	 <img class="profile" src="assets/images/profile_3.JPG">
 	 <p id="bio">
 	 	I am a world traveler who, along with my wonderful girlfriend, has a great appreciation of art and art collecting. During my travels in France, I was exposed to a number of artistic genres and media, as a part of a cultural and linguistic exprerience during the spring of 2010. Although I am fond of art with Haitian, French and Brazilian origins, the local DMV art community overflows with artistic expression. 
 	 </p>
