--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 	<div class="content">
 	  <img class="portimg" src="assets/images/portfolio_11.jpg">
 	  <img class="portimg" src="assets/images/portfolio_2.jpg">
-	  <img class="portimg" src="assets/images/portfolio_24.jpg">
+	  <img class="portimg" src="assets/images/portfolio_24.JPG">
 	  <img class="portimg" src="assets/images/portfolio_4.jpg">
 	  <img class="portimg" src="assets/images/portfolio_8.jpg">
 	  <img class="portimg" src="assets/images/portfolio_9.jpg">
@@ -49,9 +49,9 @@
 	  <img class="portimg" src="assets/images/portfolio_17.jpg">
 	  <img class="portimg" src="assets/images/portfolio_10.jpg">
 	  <img class="portimg" src="assets/images/portfolio_21.jpg">
-	  <img class="portimg" src="assets/images/portfolio_18.jpg">
-	  <img class="portimg" src="assets/images/portfolio_19.png">
-	  <img class="portimg" src="assets/images/portfolio_23.jpg">
+	  <img class="portimg" src="assets/images/portfolio_18.JPG">
+	  <img class="portimg" src="assets/images/portfolio_19.PNG">
+	  <img class="portimg" src="assets/images/portfolio_23.JPG">
 	  <img class="portimg" src="assets/images/portfolio_3.jpg">
 	  <img class="portimg" src="assets/images/portfolio_22.jpg">
 	</div>
